--- a/index.html
+++ b/index.html
@@ -152,7 +152,27 @@
                 return listo;
         }
     }
-    
+    var training = {
+      type: "html-button-response",
+      stimulus: "<p> Das Experiment beginnt mit einem Übungsversuch, damit Sie das Experiment verstehen. </p>",
+      choices: ['Weiter'],
+      post_trial_gap: 1000
+    };
+    timeline.push(training);
+    var plist=shuffle(praclist,choiceofe)
+    for(j=0;j<(number_of_pracitem);j++){
+        var trial_p3 = {
+            type: "html-keyboard-response-ld",
+            stimulus: '<p style="font-size:10px' + font_size + 'px; color:  ' + color + ' ;">' + plist[j][0] + '<br> 1 <br> <br> <br> 4 <br> <br> <br> 7 <br>' + plist[j][1] + '</p>',
+            choices: ['1','4','7'],
+            correct_text:'<p style="font-size:' + font_size + 'px; color:black ;">' + 'Drücken Sie ENTER' +'</p>',
+            incorrect_text:'<p style="font-size:' + font_size + 'px; color:black ;">' + 'Drücken Sie ENTER' +'</p>',
+            correct_choice: ['1','4','7'],
+            data : {stimulus: plist[j][0]+'\t'+plist[j][1], Particpant_id:participant_id, Entry_Number: entry_number,  Experiment_ID: plist[j][2], Item_ID : plist[j][3], Condition_ID : plist[j][4]}
+        }
+        timeline.push(fixation);
+        timeline.push(trial_p3);
+    }
     var endtraining = {
       type: "html-button-response",
       stimulus: "<p> Übungstests enden hier. Jetzt beginnen wir mit dem Hauptexperiment. </p>",
@@ -161,23 +181,26 @@
     };
     timeline.push(endtraining);
 
-      ln=list_number%number_of_lists
-        var list = shuffle(lists,choiceofe)
+        ln=list_number%number_of_lists
+        var list = shuffle(lists[ln],choiceofe)
         for(j=0;j<(limit+number_of_fillers);j++){
-            var templist = list[j][4]
+            var templist = shuffle([list[j][0],list[j][1]],1)
+            var condnew = "part-inf"
+            if(templist[0]==list[j][1]){
+              condnew="inf-part"
+            }
             var trial_3 = {
                 type: "html-keyboard-response-ld",
-                stimulus: '<p style="font-size:10px' + font_size + 'px; color:  ' + color + ' ;">' + templist + '<br> <br> <br> <br> 1 2 3 4 5 6 7' + '</p>',
-                choices: ['1','2','3','4','5','6','7'],
-                correct_choice: ['1','2','3','4','5','6','7'],
+                stimulus: '<p style="font-size:10px' + font_size + 'px; color:  ' + color + ' ;">' + templist[0] + '<br> 1 <br> <br> <br> 4 <br> <br> <br> 7 <br>' +templist[1] + '</p>',
+                choices: ['1','4','7'],
+                correct_choice: ['1','4','7'],
                 correct_text:'<p style="font-size:' + font_size + 'px; color:black ;">' + 'Drücken Sie ENTER' +'</p>',
                 incorrect_text:'<p style="font-size:' + font_size + 'px; color:black ;">' + 'Drücken Sie ENTER' +'</p>',
-                data : {stimulus: templist, Particpant_id:participant_id, Entry_Number: entry_number,  Experiment_ID: 1, Item_ID : list[j][0], Condition_ID : list[j][1]}
+                data : {stimulus: templist[0]+' '+templist[1], Particpant_id:participant_id, Entry_Number: entry_number,  Experiment_ID: list[j][2], Item_ID : list[j][3], Condition_ID : condnew}
             }
             timeline.push(fixation);
             timeline.push(trial_3);
         }
-
 
       var endmain = {
         type: "html-keyboard-response",
