--- a/index.html
+++ b/index.html
@@ -181,22 +181,35 @@
     };
     timeline.push(endtraining);
 
-        ln = shuffle([0,1,2,3],1)
+        ln = shuffle([0,1,2,3],1)[0]
         var list = shuffle(lists[ln],choiceofe)
         for(j=0;j<(limit+number_of_fillers);j++){
-            var templist = list[j][4]
-            var condnew = "part-inf"
+            var templist = list[j][5]
             var trial_3 = {
                 type: "html-keyboard-response-ld",
-                stimulus: '<p style="font-size:10px' + font_size + 'px; color:  ' + color + ' ;">' + templist + '<br> <br> <br> <br> <br> <br> 1 &emsp;&emsp;&emsp; 2 &emsp;&emsp;&emsp 3 &emsp;&emsp;&emsp; 4 &emsp;&emsp;&emsp; 5 &emsp;&emsp;&emsp; 6 &emsp;&emsp;&emsp; 7 &emsp;&emsp;&emsp; 8 &emsp;&emsp;&emsp; 9' + '</p>',
-                choices: ['1','2','3','4','5','6','7'],
-                correct_choice: ['1','2','3','4','5','6','7'],
+                stimulus: '<p style="font-size:10px' + font_size + 'px; color:  ' + color + ' ;">' + templist + '<br> <br> <br> <br> <br> <br> 1 &emsp;&emsp;&emsp; 2 &emsp;&emsp;&emsp; 3 &emsp;&emsp;&emsp; 4 &emsp;&emsp;&emsp; 5 &emsp;&emsp;&emsp; 6 &emsp;&emsp;&emsp; 7 &emsp;&emsp;&emsp; 8 &emsp;&emsp;&emsp; 9' + '</p>',
+                choices: ['1','2','3','4','5','6','7','8','9'],
+                correct_choice: ['1','2','3','4','5','6','7','8','9'],
                 correct_text:'<p style="font-size:' + font_size + 'px; color:black ;">' + 'Drücken Sie ENTER' +'</p>',
                 incorrect_text:'<p style="font-size:' + font_size + 'px; color:black ;">' + 'Drücken Sie ENTER' +'</p>',
-                data : {stimulus: templist, Particpant_id:participant_id, Entry_Number: entry_number,  Experiment_ID: list[j][2], Item_ID : list[j][0], Condition_ID : list[j][1]}
+                data : {stimulus: templist, Particpant_id:participant_id, Entry_Number: entry_number,  Experiment_ID: list[j][2], Item_ID : list[j][0], Condition_ID : list[j][1], List_ID : list[j][4]}
             }
+            var temp_right = list[j][6]
+            var temp_false1 = list[j][7]
+            var temp_false2 = list[j][8]
+            var temp_false3 = list[j][9]
+            var question_trial = {
+                type: "html-button-response",
+                stimulus: '<p style="font-size:10px' + font_size + 'px; color:  ' + color + ' ;">' + 'Welche der vier Aussagen ist richtig? <br> <br>' + '</p>',
+                choices: [temp_right,temp_false1,temp_false2,temp_false3],
+                margin_vertical: '20px',
+                margin_horizontal: '300px',
+                post_trial_gap: 500
+            }
+
             timeline.push(fixation);
             timeline.push(trial_3);
+            timeline.push(question_trial);
         }
 
       var endmain = {
@@ -231,7 +244,7 @@
             //proliferate.submit(jsPsych.data.get().filter({trial_type: 'html-keyboard-response-ld'}).csv());
             //proliferate.submit(jsPsych.data.get().filter({trial_type: 'survey-text'}).json());
             //proliferate.submit(jsPsych.data.get().filter({trial_type: 'survey-multi-choice'}).json());
-            proliferate.submit({"trials": jsPsych.data.get().filter([{trial_type: 'html-keyboard-response-ld'},{trial_type: 'survey-text'},{trial_type: 'survey-multi-choice'}]).values()});
+            proliferate.submit({"trials": jsPsych.data.get().filter([{trial_type: 'html-keyboard-response-ld'},{trial_type: 'html-button-response',stimulus: '<p style="font-size:10px' + font_size + 'px; color:  ' + color + ' ;">' + 'Welche der vier Aussagen ist richtig? <br> <br>' + '</p>'},{trial_type: 'survey-text'},{trial_type: 'survey-multi-choice'}]).values()});
       }
     });
   </script>
