--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                 stimulus: '<p style="font-size:10px' + font_size + 'px; color:  ' + color + ' ;">' + templist + '<br> <br> <br> <br> <br> <br> 1 &emsp;&emsp;&emsp; 2 &emsp;&emsp;&emsp; 3 &emsp;&emsp;&emsp; 4 &emsp;&emsp;&emsp; 5 &emsp;&emsp;&emsp; 6 &emsp;&emsp;&emsp; 7 &emsp;&emsp;&emsp; 8 &emsp;&emsp;&emsp; 9' + '</p>',
                 choices: ['1','2','3','4','5','6','7','8','9'],
                 correct_choice: ['1','2','3','4','5','6','7','8','9'],
-                correct_text:'<p style="font-size:' + font_size + 'px; color:black ;">' + 'Drücken Sie ENTER' +'</p>',
-                incorrect_text:'<p style="font-size:' + font_size + 'px; color:black ;">' + 'Drücken Sie ENTER' +'</p>',
+                //correct_text:'<p style="font-size:' + font_size + 'px; color:black ;">' + 'Drücken Sie ENTER' +'</p>',
+                //incorrect_text:'<p style="font-size:' + font_size + 'px; color:black ;">' + 'Drücken Sie ENTER' +'</p>',
                 data : {stimulus: templist, Particpant_id:participant_id, Entry_Number: entry_number,  Experiment_ID: list[j][2], Item_ID : list[j][0], Condition_ID : list[j][1], List_ID : list[j][4]}
             }
             var temp_right = list[j][6]
